default/objects/success__User_Performance__c/success__User_Performance__c.object-meta.xml
<CustomObject>
    <description>Records the historical level and points total (i.e their score) for each Player participating in an active Collective (Competition or Experience Group). Rank is also recorded for Competitions. Once enabled this information can be captured on a daily or weekly basis.</description>
    <label>Player Performance</label>
    <nameField>
        <displayFormat>UPe-{000000}</displayFormat>
        <label>Performance Entries ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>