default/objects/success__User_Performance__c/fields/success__As_Of__c.field-meta.xml
<CustomField>
    <fullName>success__As_Of__c</fullName>
    <label>As Of</label>
    <type>Date</type>
</CustomField>