default/objects/success__User_Performance__c/fields/success__Experience__c.field-meta.xml
<CustomField>
    <fullName>success__Experience__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>