default/objects/success__User_Performance__c/fields/success__Level__c.field-meta.xml
<CustomField>
    <fullName>success__Level__c</fullName>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>