default/objects/success__User_Performance__c/fields/success__Rank__c.field-meta.xml
<CustomField>
    <fullName>success__Rank__c</fullName>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>