default/objects/success__User_Performance__c/fields/success__Team_Member__c.field-meta.xml
<CustomField>
    <fullName>success__Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member ID</label>
    <referenceTo>success__Team_Member__c</referenceTo>
    <relationshipLabel>Player Performance</relationshipLabel>
    <relationshipName>Competitor_History</relationshipName>
    <type>Lookup</type>
</CustomField>