default/objects/success__User_Performance__c/fields/success__User__c.field-meta.xml
<CustomField>
    <fullName>success__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>